--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -38,6 +38,12 @@
             {{ formAuctionList.created_date }}
         </div>
     </div>
+    <div>  
+        <label>{{ formAuctionList.category.label_tag }}</label> 
+        <div>
+            {{ formAuctionList.category }}
+        </div>
+    </div>
 
     <div>
         <input type="submit">
