--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -1,11 +1,31 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    <h2>Active Listings</h2>
-    <ul>
+    <div class="container-fluid">
+        <h2>Active Listings</h2>
+    </div>
+    <ul class="container-fluid">
         {% for auction in auctions %}
-        <li>
-            {{ auction.title }}
+        <li class="row">
+            <div class="col-md-12">
+                <div class="card flex-md-row mb-2 box-shadow h-md-200">
+                <img class="card-img-right flex-auto d-none d-md-block" 
+                     data-src="holder.js/200x250?theme=thumb"
+                     alt="Thumbnail [200x250]" style="width:200px;height: 200px;" 
+                     src="{{ auction.image_url }}" data-holder-rendered="true">
+                  <div class="card-body d-flex flex-column align-items-start">
+                      <strong class="d-inline-block mb-2 text-primary">{{ auction.category.name }}</strong>
+                    <h3 class="mb-0">
+                      <a class="text-dark" href="#">{{ auction.title }}</a>
+                    </h3>
+                    <h5 class="mb-0">
+                        <span class="text-dark">Price:</span> ${{ auction.price }}
+                    </h5>
+                    <div class="mb-1 text-muted">{{ auction.created_date }}</div>
+                    <p class="card-text mb-auto">{{ auction.description }}</p>
+                  </div>
+                </div>
+            </div>
         </li>
         {% endfor %}
     </ul>
