--- a/auctions/templates/auctions/listing_detail.html
+++ b/auctions/templates/auctions/listing_detail.html
@@ -3,5 +3,15 @@
 <h1>
     {{title}}
 </h1>
-
+<ul>
+    <li>{{ listing.title }}</li>
+    <li>{{ listing.description}}</li>
+    <li>{{ listing.price }}</li>
+    <li>
+        <img src="{{ listing.image_url }}" 
+             width="200px" 
+             height="200px" 
+             alt="{{ listing.title }}">
+    </li>
+</ul>
 {% endblock %}
