--- a/auctions/templates/auctions/listing_detail.html
+++ b/auctions/templates/auctions/listing_detail.html
@@ -6,7 +6,6 @@
 <ul>
     <li>{{ listing.title }}</li>
     <li>{{ listing.description}}</li>
-    <li>{{ listing.price }}</li>
     <li>
         <img src="{{ listing.image_url }}" 
              width="200px" 
@@ -14,6 +13,17 @@
              alt="{{ listing.title }}">
     </li>
     <li>{{ listing.category.name }}</li>
+    <li>
+        <h3>{{ listing.price }}</h3>
+    </li>
+    <li>
+        <span>{{ bids }} bid(s) so far. Your bid is the current bid</span>
+        <form action="{% url 'place_bid' listing.id %}" method="post">
+            {% csrf_token %}
+            <input type="number" name="bid_value">
+            <button type="submit" class="btn btn-primary"> Place Bid </button>
+        </form>
+    </li>
     <li>
         <form action="{% url 'add_watch_list' listing.id %}" method="post">
             {% csrf_token %}
