--- a/auctions/templates/auctions/listing_detail.html
+++ b/auctions/templates/auctions/listing_detail.html
@@ -1,68 +1,101 @@
 {% extends "auctions/layout.html" %}
 {% block body %}
-<h1>
-    {{title}}: {{listing.title}}
-</h1>
-{% if messages %}
-
-    {% for message in messages %}
-        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
-            <div class="alert alert-danger" role="alert">
-                {{ message }}
+<div class="container-fluid">
+    <div class="row">
+        <h1 class="col-sm-12">
+            {{title}}: {{listing.title}}
+        </h1>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
+            {% if messages %}
+                {% for message in messages %}
+                    {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                        <div class="alert alert-danger" role="alert">
+                            {{ message }}
+                        </div>
+                    {% else %}
+                        <div class="alert alert-success" role="alert">
+                            {{ message }}
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
+        </div>
+    </div>
+</div>
+<div class="container-fluid">
+    <ul class="view_detail_list">
+        <li>
+            <div class="row">
+                <div class="col-sm-12">
+                    {% if isWatched == False %}
+                    <form action="{% url 'add_watch_list' listing.id %}" method="post">
+                        {% csrf_token %}
+                        <button type="submit" class="btn badge badge-primary"> 
+                            <i class="fas fa-eye"></i>
+                            Watchlist
+                        </button>
+                    </form>
+                    {% else %}
+                    <form action="{% url 'remove_watch_list' listing.id %}" method="post">
+                        {% csrf_token %}
+                        <button type="submit" class="btn badge badge-danger"> 
+                            <i class="fas fa-eye-slash"></i>
+                            Unwatch
+                        </button>
+                    </form>
+                    {% endif %}
+                </div>
             </div>
-        {% else %}
-            <div class="alert alert-success" role="alert">
-                {{ message }}
+        </li>
+        <li>
+            <div class="row">
+                <div class="col-sm-3">
+                    <img src="{{ listing.image_url }}" 
+                            class="col-sm-12"
+                            alt="{{ listing.title }}">
+                </div>
+                <div class="col-sm">
+                    <ul class="content-auction-view">
+                        <li>
+                            <div>
+                                <strong>Description:</strong>
+                            </div>
+                            
+                            {{ listing.description}}
+                        </li>
+                        <li>
+                            <h3>${{ listing.price }}</h3>
+                        </li>
+                        {% if user.is_authenticated %}
+                        <li>
+                            <span>{{ bids }} bid(s) so far. Your bid is the current bid</span>
+                            <form action="{% url 'place_bid' listing.id %}" method="post">
+                                {% csrf_token %}
+                                <div class="form-group">
+                                    <input type="number" class="form-control"  placeholder="Bid" name="bid_value">
+                                </div>
+                                <button type="submit" class="btn btn-primary"> Place Bid </button>
+                            </form>
+                        </li>
+                        {% if listing.createdBy.id == user.id %}
+                        <li class="btn-actions-group">
+                            <form action="{% url 'close_list' listing.id %}" method="post">
+                                {% csrf_token %}
+                                <button class="btn btn-secondary">
+                                    <i class="fas fa-times-circle"></i>
+                                    Close
+                                </button>
+                            </form>
+                        </li>
+                        {% endif %}
+                    
+                        {% endif %}
+                    </ul>
+                </div>  
             </div>
-        {% endif %}
-    {% endfor %}
-</ul>
-{% endif %}
-
-
-<ul>
-    <li>{{ listing.title }}</li>
-    <li>{{ listing.description}}</li>
-    <li>
-        <img src="{{ listing.image_url }}" 
-             width="200px" 
-             height="200px" 
-             alt="{{ listing.title }}">
-    </li>
-    <li>{{ listing.category.name }}</li>
-    <li>
-        <h3>{{ listing.price }}</h3>
-    </li>
-    {% if user.is_authenticated %}
-    <li>
-        <span>{{ bids }} bid(s) so far. Your bid is the current bid</span>
-        <form action="{% url 'place_bid' listing.id %}" method="post">
-            {% csrf_token %}
-            <input type="number" name="bid_value">
-            <button type="submit" class="btn btn-primary"> Place Bid </button>
-        </form>
-    </li>
-    <li>
-        <form action="{% url 'add_watch_list' listing.id %}" method="post">
-            {% csrf_token %}
-            {% if listing.watchlist  %}
-            <button type="submit" class="btn btn-danger"> Unwatch</button>
-            {% else %}
-            <button type="submit" class="btn btn-primary"> Watchlist</button>
-            {% endif%}
-        </form>
-    </li>
-    {% if listing.createdBy.id == user.id %}
-    <li>
-        <form action="{% url 'close_list' listing.id %}" method="post">
-            {% csrf_token %}
-            <button class="btn btn-default">
-                Close list
-            </button>
-        </form>
-    </li>
-    {% endif %}
-
-    {% endif %}
-</ul>
+        </li>
+    </ul>
+</div>
 {% endblock %}
