--- a/auctions/templates/auctions/listing_detail.html
+++ b/auctions/templates/auctions/listing_detail.html
@@ -99,6 +99,38 @@
                 </div>  
             </div>
         </li>
+        <li>
+            <div class="row">
+                <div class="col-sm">
+                    <h4>Comments</h4>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="comment-item">
+                        <div class="content-comment">
+                            Content Item
+                        </div>
+                        <div class="offset-sm-9 comment-info">
+                            <span> <b>Created by:</b>username</span>
+                            <span> <b>Date:</b> 12/05/2016</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12">
+                    <form action="{% url 'place_comment' listing.id %}" method="POST">
+                        <div class="form-group">
+                            <label>Comment</label>
+                            <textarea class="form-control" 
+                                      name="content_comment" 
+                                      cols="30" 
+                                      rows="3"></textarea>
+                        </div>
+                        <button class="btn btn-primary">Place comment</button>
+                    </form>
+                </div>
+            </div>
+        </li>
     </ul>
 </div>
 {% endblock %}
