--- a/auctions/templates/auctions/listing_detail.html
+++ b/auctions/templates/auctions/listing_detail.html
@@ -28,6 +28,7 @@
     <ul class="view_detail_list">
         <li>
             <div class="row">
+                {% if user.is_authenticated %}
                 <div class="col-sm-12">
                     {% if isWatched == False %}
                     <form action="{% url 'add_watch_list' listing.id %}" method="post">
@@ -47,6 +48,7 @@
                     </form>
                     {% endif %}
                 </div>
+                {% endif %}
             </div>
         </li>
         <li>
@@ -122,6 +124,7 @@
                     </div>
                     {% endfor %}
                 </div>
+                {% if user.is_authenticated %}
                 <div class="col-sm-12">
                     <form action="{% url 'place_comment' listing.id %}" method="POST">
                         {% csrf_token %}
@@ -135,6 +138,7 @@
                         <button class="btn btn-primary">Place comment</button>
                     </form>
                 </div>
+                {% endif %}
             </div>
         </li>
     </ul>
